trying to fix star being cut off

--- a/public/style.css
+++ b/public/style.css
@@ -356,8 +356,8 @@ section.active {
   background: transparent; 
   border: 2px transparent;
   border-radius: none;
-  width: 45px;
-  height: 45px;
+  width: 50px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
